[gd_scene load_steps=7 format=3 uid="uid://1tu6baghoprd"]

[ext_resource type="PackedScene" uid="uid://d25mecoy5ka6l" path="res://topics/tree_traversal/tree_traversal.tscn" id="1_rp2dr"]
[ext_resource type="Script" path="res://topics/max_heap/max_heap.gd" id="2_in3j6"]
[ext_resource type="PackedScene" uid="uid://cgn142w7si83j" path="res://structs/heap/heap_vertex.tscn" id="3_j0ker"]
[ext_resource type="Script" uid="uid://ewsd7j2dedwe" path="res://topics/ui/scripts/buttons_toggle.gd" id="3_rdo05"]
[ext_resource type="Theme" uid="uid://ch47gokw4nkj3" path="res://misc/theme.tres" id="3_srtbk"]
[ext_resource type="PackedScene" uid="uid://bwuylmsasrk2m" path="res://structs/array/visu_array.tscn" id="4_bxmcl"]

[node name="root" node_paths=PackedStringArray("visu_array", "input_field") instance=ExtResource("1_rp2dr")]
script = ExtResource("2_in3j6")
visu_array = NodePath("CanvasLayer/VisuArray")
input_field = NodePath("CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/LineEdit")
vertex_scene = ExtResource("3_j0ker")

[node name="button_insert" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="0"]
visible = true

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="1"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme = ExtResource("3_srtbk")
placeholder_text = "ENTER_INTEGER_INS"
max_length = 4

[node name="button_remove_max" type="Button" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="2" groups=["buttons_active"]]
layout_mode = 2
text = "remove_max"
script = ExtResource("3_rdo05")

[node name="bbutton_reset" type="Button" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="3" groups=["buttons_active"]]
layout_mode = 2
text = "reset"
script = ExtResource("3_rdo05")

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="4"]
layout_mode = 2

[node name="button_reset_tut" type="Button" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="5" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "resetet den heap und fügt anschließend die elemente gemäß aufgabe 1 ein

reelix hat immer sehr gute ideen :) <3"
text = "reset_tut"
script = ExtResource("3_rdo05")

[node name="button_insert_20" type="Button" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="6" groups=["buttons_active"]]
layout_mode = 2
text = "insert 83"
script = ExtResource("3_rdo05")

[node name="button_insert_40" type="Button" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="7" groups=["buttons_active"]]
layout_mode = 2
text = "insert 63"
script = ExtResource("3_rdo05")

[node name="button_remove_max_tut" type="Button" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="8" groups=["buttons_active"]]
layout_mode = 2
text = "remove_max"
script = ExtResource("3_rdo05")

[node name="button_preorder" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="9"]
visible = false

[node name="button_inorder" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="10"]
visible = false

[node name="button_postorder" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="11"]
visible = false

[node name="button_levelorder" parent="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2" index="12"]
visible = false

[node name="stackframe" parent="CanvasLayer" index="1"]
visible = false
custom_minimum_size = Vector2(150, 0)

[node name="size_label" parent="CanvasLayer/stackframe/MarginContainer/VBoxContainer" index="3"]
visible = false

[node name="code" parent="CanvasLayer/side_panel/content/container_code/content" index="1"]
max_screen_height_cover = 0.55

[node name="VisuArray" parent="CanvasLayer" index="4" instance=ExtResource("4_bxmcl")]
offset_left = 5.0
offset_top = 50.0
offset_right = 855.0
offset_bottom = 120.0
array_name = "tree_array"

[node name="Camera2D" parent="." index="1"]
position = Vector2(-56, 380)
zoom = Vector2(0.825, 0.825)

[node name="new_ptr" parent="." index="2"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)

[node name="root_ptr" parent="." index="3"]
position = Vector2(-120, 33)

[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_remove_max" to="." method="_on_button_remove_max_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_remove_max" to="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_remove_max" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/bbutton_reset" to="." method="_on_bbutton_reset_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_reset_tut" to="." method="_on_button_reset_tut_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_reset_tut" to="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_reset_tut" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_insert_20" to="." method="_on_button_insert_20_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_insert_20" to="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_insert_20" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_insert_40" to="." method="_on_button_insert_40_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_insert_40" to="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_insert_40" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_remove_max_tut" to="." method="_on_button_remove_max_tut_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_remove_max_tut" to="CanvasLayer/buttons/buttons_algorithm/HBoxContainer2/button_remove_max_tut" method="_on_pressed"]

[editable path="CanvasLayer/side_panel"]
